# cloneofx

./: .gitignore  README.md  db.sqlite3  env.dev  manage.py  pyproject.toml
cloneofx/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tweets/: models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tweet_options_rename_author_tweet_user_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_follow.py
